--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,11 +105,9 @@ IF(MSVC)
 ENDIF(MSVC)
 
 SET(Boost_ADDITIONAL_VERSIONS 
-"1.42.0" "1.42" "1.43.0" "1.43" "1.44.0" "1.44" "1.45.0" "1.45" "1.46.0" "1.46" 
-"1.47.0" "1.47" "1.48.0" "1.48" "1.49.0" "1.49")
-FIND_PACKAGE(Boost 1.36 COMPONENTS ${BOOST_REQUIRED_COMPONENTS})
-
-ADD_DEFINITIONS( -DBOOST_FILESYSTEM_VERSION=2 ) #use filesystem version 2 in boost >=1.46
+    "1.46.0" "1.46" "1.47.0" "1.47" "1.48.0" "1.48" "1.49.0" "1.49" 
+    "1.50.0" "1.50" "1.51.0" "1.51" "1.52.0" "1.52")
+FIND_PACKAGE(Boost 1.46 COMPONENTS ${BOOST_REQUIRED_COMPONENTS})
 
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
@@ -143,7 +141,7 @@ ADD_SUBDIRECTORY (tests)
 ########################################################################
 # Set up the documentation
 ########################################################################
-SET(DOC_FILES AUTHORS CHANGELOG README)
+SET(DOC_FILES COPYRIGHT LICENSE LICENSE.GPL README)
 INSTALL(FILES ${DOC_FILES}
         DESTINATION ${DOC_DIR})
 
