Still using CMAKE_SOURCE_DIR to check for in-tree builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@
 ########################################################################
 # Prevent in-tree builds
 ########################################################################
-IF(${PROJECT_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
     MESSAGE(FATAL_ERROR "Prevented in-tree built. This is bad practice.")
-ENDIF(${PROJECT_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+ENDIF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
 
 ########################################################################
 # Project setup
