Renamed from PN engine and components to Phy

--- a/src/engines/CMakeLists.txt
+++ b/src/engines/CMakeLists.txt
@@ -26,5 +26,5 @@
 # Recurse into the "src" and "lib" subdirectories. This does not actually
 # cause another cmake executable to run. The same process will walk through
 # the project's entire directory structure.
-ADD_SUBDIRECTORY (pnengine)
+ADD_SUBDIRECTORY (phyengine)
 ADD_SUBDIRECTORY (stackengine)
