Using a macro to simplify adding -fPIC compile flag for x86_64 builds of static libraries

--- a/src/engines/phyengine/CMakeLists.txt
+++ b/src/engines/phyengine/CMakeLists.txt
@@ -36,9 +36,7 @@ SET(phyengine_sources
 
 )
 ADD_LIBRARY(phyengine STATIC ${phyengine_sources})
-IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
-  SET_TARGET_PROPERTIES(phyengine PROPERTIES COMPILE_FLAGS -fPIC)
-ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+IRIS_SET_PIC(phyengine)
 TARGET_LINK_LIBRARIES(phyengine sharedlibrary)
 
 
