--- a/src/ticpp/src/CMakeLists.txt
+++ b/src/ticpp/src/CMakeLists.txt
@@ -36,7 +36,5 @@ SET(ticpp_sources
     tinyxmlerror.cpp
 )
 ADD_LIBRARY(ticpp STATIC ${ticpp_sources})
-SET_TARGET_PROPERTIES(ticpp PROPERTIES COMPILE_FLAGS "-DTIXML_USE_TICPP")
-IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
-  SET_TARGET_PROPERTIES(ticpp PROPERTIES COMPILE_FLAGS "-DTIXML_USE_TICPP -fPIC")
-ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+SET_TARGET_PROPERTIES(ticpp PROPERTIES COMPILE_DEFINITIONS TIXML_USE_TICPP)
+IRIS_SET_PIC(ticpp)
