--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,9 +52,7 @@ SET(iris_core_sources
 # Static library (test code can link against this)
 ADD_LIBRARY(iris_lib ${iris_core_sources})
 TARGET_LINK_LIBRARIES(iris_lib ticpp phyengine stackengine ${Boost_LIBRARIES})
-IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
-  SET_TARGET_PROPERTIES(iris_lib PROPERTIES COMPILE_FLAGS -fPIC)
-ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+IRIS_SET_PIC(iris_lib)
 
 # Shared library (gets installed)
 ADD_LIBRARY(iris_core SHARED Iris.cpp)
