--- a/src/sharedlibrary/CMakeLists.txt
+++ b/src/sharedlibrary/CMakeLists.txt
@@ -34,8 +34,6 @@ ELSE(WIN32)
   FIND_PACKAGE(DL REQUIRED)
   INCLUDE_DIRECTORIES(${DL_INCLUDE_DIRS})
   ADD_LIBRARY(sharedlibrary STATIC SharedLibrary_posix.cpp)
-  IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
-    SET_TARGET_PROPERTIES(sharedlibrary PROPERTIES COMPILE_FLAGS -fPIC)
-  ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
+  IRIS_SET_PIC(sharedlibrary)
   TARGET_LINK_LIBRARIES(sharedlibrary ${DL_LIBRARIES})
 ENDIF(WIN32)
