Only including and linking qt4 & qwt if found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,10 +134,14 @@ MESSAGE(STATUS "Boost libraries: ${Boost_LIBRARIES}")
 # Setup Qt and Qwt
 ########################################################################
 FIND_PACKAGE(Qt4)
-INCLUDE(${QT_USE_FILE})
+IF(QT4_FOUND)
+    INCLUDE(${QT_USE_FILE})
+ENDIF(QT4_FOUND)
 
 FIND_PACKAGE(Qwt)
-INCLUDE_DIRECTORIES(${QWT_INCLUDE_DIRS})
+IF(QT4_FOUND AND QWT_FOUND)
+    INCLUDE_DIRECTORIES(${QWT_INCLUDE_DIRS})
+ENDIF(QT4_FOUND AND QWT_FOUND)
 
 IF(QT4_FOUND AND QWT_FOUND)
     ADD_DEFINITIONS( -DHAVE_QT )
