--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,7 +67,7 @@ INSTALL(TARGETS iris_core
 ADD_EXECUTABLE (iris Launcher.cpp IrisStateMachine.cpp Iris.cpp)
 IF(QT4_FOUND AND QWT_FOUND)
     TARGET_LINK_LIBRARIES (iris iris_lib ${QT_LIBRARIES} ${QWT_LIBRARIES})
-ELSEIF(QT4_FOUND AND QWT_FOUND)
+ELSE(QT4_FOUND AND QWT_FOUND)
     TARGET_LINK_LIBRARIES (iris iris_lib)
 ENDIF(QT4_FOUND AND QWT_FOUND)
 
