Adding optional step value to Interval class

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,6 +55,7 @@ SET(test_sources
     DataBuffer_test.cpp
     DataTypes_test.cpp
     EngineManager_test.cpp
+    Interval_test.cpp
     Logging_test.cpp
     MemoryManager_test.cpp
     PhyEngine_test.cpp
