add testcase for metadata class

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,6 +58,7 @@ SET(test_sources
     Interval_test.cpp
     Logging_test.cpp
     MemoryManager_test.cpp
+    Metadata_test.cpp
     PhyEngine_test.cpp
     RadioRepresentation_test.cpp
     ReconfigurationManager_test.cpp
